# AdventofCode

./: .clang-format  .flake8  .gitattributes  .gitignore  .pep8  CMakeLists.txt  CMakePresets.json  CODE_REVIEW.md  CodeStatistic.cc  JavaInheritance.md  README.md  pom.xml  pyproject.toml  ~pom.xml
2024/: CMakeLists.txt  README.md  Summary.md  main.cc
2024/Day01/: 1_PairAndAdd.cpp  PairAndAdd.cpp  PairAndAdd.h
2024/Day02/: 2_CheckLevels_Dampener.cpp  CheckLevelInOrder.cpp  CheckLevelInOrder.h
2024/Day03/: 1_FindMul.cpp  2_PreciseMul.cpp  FindMul.cpp  PreciseMul.cpp  PreciseMul.h  example.txt  input.txt
2024/Day04/: CeresSearch.cpp  CeresSearch.h
2024/Day05/: 1_OrderingUpdates.cpp  OrderingUpdates.cpp  OrderingUpdates.h
2024/Day06/: 2_CircleObstacle.cpp  2_CirclePatrol.h  PatrolRoute.cpp  PatrolRoute.h  PatrolRouteFutureVersion.cpp
2024/Day07/: Calibration.cpp  Calibration.h
2024/Day08/: 1_AntinodesCnt.cpp  AntinodeHarmonic.h
2024/Day09/: 1_compactingBlocks.cpp  2_compactingFiles.cpp  DiskCompact.cpp  DiskCompact.h
2024/Day1/: 2_CountDulpicateTimes.cpp
2024/Day10/: 1_trailScore.cpp  2_ttrailScore.cpp  TrailScore.h
2024/Day11/: 1_TwinkleStones.cpp  2_DPTwinkle.cpp  2_ThreadTwinkle(BadIdea).cpp  TwinkleStones.h  exe_1_TwinkleStones  exe_2_DPTwinkle  exe_2_ThreadTwinkle
2024/Day12/: 1_perimeter.cpp  2_edge.cpp  AsciiGraph.h  boundary.h
2024/Day13/: 1_coinOptimize.cpp  CoinOptimize.cpp  CoinOptimize.h  TestEMAC  TestEMAC.cpp  TestEMAC.md
2024/Day14/: 1_robotPatrol.cpp  RobotPatrol.cpp  RobotPatrol.h
2024/Day15/: 1_pushBoxes.cpp  2_pushWIderBoxes.cpp  PushBox.h  box.h  charIO.cpp  move.txt  pushBoxes.cpp  pushWiderBoxes.cpp  wallPos  wallPos2
2024/Day16/: 1_MazeDijkstra.cpp  1_ReindeerMaze  1_ReindeerMaze.cpp  1_ReindeerMazeBFS_ShortestPath.cpp  1_ReindeerMazeDFS.cpp  1_ReindeerMaze_BFS.cpp  Diff1.txt  Diff2.txt  MazeDijkstra.cpp  MazeDijkstra.h  MazeDijkstraOverride.cpp  answer.cpp  inputCutOptimize.txt  input_example3.txt  testOverride.cpp
2024/Day17/: 3bitMachine.cpp  3bitMachine.h  ARythmOfMath.cpp  TenaryMachine.cpp  TenaryMachine.h
2024/Day18/: RAMRun.cpp  RAMRun.h  readtest.cpp
2024/Day19/: ExampleInput.txt  LinenLayout.cpp  LinenLayout.h  input.txt  test.cpp
2024/Day2/: 1_CheckLevels.cpp
2024/Day20/: ProgressBar.h  RaceCondition  RaceCondition.cpp  RaceCondition.h
2024/Day21/: CascadingRemote.cpp  CascadingRemote.h  CascadingRemoteBackup.cpp  CascadingRemoteDualRecursion.cpp  KeyPadStructure.h
2024/Day22/: MonkeyMarket.cpp  MonkeyMarket.h  MonkeyMarketDP(Useless).cpp  MonkeyMarketDP(Useless).h
2024/Day23/: LANParty.cpp  LANParty.h
2024/Day24/: FullAdder.md  GatesVisualize.md  TinkerWithGates.cpp  TinkerWithGates.h  example3.txt  example4.txt  gates.h  mermaid.md  solution.py
2024/Day25/: 1_clockKeyPair.cpp  KeyPair.cpp  KeyPair.h
2024/Day3/: MulItUp.ipynb
2024/Day4/: 1_CeresSearch.cpp  2_XMAS.cpp
2024/Day5/: 2_OrderingUpdates  2_OrderingUpdates.cpp  UpdatesInput.txt
2024/Day6/: 1_PatrolRoute.cpp  2_CircleObstacle.cpp
2024/Day7/: 1_Caliration.cpp  2_CombineCalibration.cpp
2024/Day8/: 1_AntinodesCnt.cpp  2_AntinodeHarmonic.cpp
2024/Day9/: 1_compactingFiles.cpp  2_compactingFiles.cpp  original.txt  output.txt
2024/UnitTest/: test.cpp
2024/UnitTest/Benchmark/: nextPermutation.cpp  speedTest.cpp  speedTest.py
2024/UnitTest/Day6/: 2_CircleObstaclePlacement.cpp
2024/util/: StringSpliter.cpp
2024/utils/: ProgressBar.h  charIO.cpp
Cpp/2024/: CMakeLists.txt  README.md
Cpp/2024/main/year2024/: main.cc
Cpp/2024/main/year2024/Day01/: PairAndAdd.h
Cpp/2024/main/year2024/Day02/: CheckLevelInOrder.h
Cpp/2024/main/year2024/Day03/: PreciseMul.h
Cpp/2024/main/year2024/Day04/: CeresSearch.h
Cpp/2024/main/year2024/Day05/: OrderingUpdates.h
Cpp/2024/main/year2024/Day06/: PatrolRoute.h
Cpp/2024/main/year2024/Day07/: Calibration.h
Cpp/2024/main/year2024/Day08/: AntinodeHarmonic.h
Cpp/2024/main/year2024/Day09/: DiskCompact.h
Cpp/2024/main/year2024/Day10/: TrailScore.h
Cpp/2024/main/year2024/Day11/: TwinkleStones.h
Cpp/2024/main/year2024/Day12/: AsciiGraph.h
Cpp/2024/main/year2024/Day13/: CoinOptimize.h
Cpp/2024/main/year2024/Day14/: RobotPatrol.h
Cpp/2024/main/year2024/Day15/: PushBox.h
Cpp/2024/main/year2024/Day16/: MazeDijkstra.h
Cpp/2024/main/year2024/Day17/: TenaryMachine.h
Cpp/2024/main/year2024/Day18/: RAMRun.h
Cpp/2024/main/year2024/Day19/: LinenLayout.h
Cpp/2024/main/year2024/Day20/: RaceCondition.h
Cpp/2024/main/year2024/Day21/: CascadingRemote.h  KeyPadStructure.h
Cpp/2024/main/year2024/Day22/: MonkeyMarket.h
Cpp/2024/main/year2024/Day23/: LANParty.h
Cpp/2024/main/year2024/Day24/: FullAdder.ms14  GatesVisualize.md  TinkerWithGates.h
Cpp/2024/src/: main.cc
Cpp/2024/src/Day01/: PairAndAdd.cc  PairAndAdd.h
Cpp/2024/src/Day02/: CheckLevelInOrder.cc  CheckLevelInOrder.h
Cpp/2024/src/Day03/: PreciseMul.cc  PreciseMul.h
Cpp/2024/src/Day04/: CeresSearch.cc  CeresSearch.h
Cpp/2024/src/Day05/: OrderingUpdates.cc  OrderingUpdates.h
Cpp/2024/src/Day06/: PatrolRoute.cc  PatrolRoute.h
Cpp/2024/src/Day07/: Calibration.cc  Calibration.h
Cpp/2024/src/Day08/: AntinodeHarmonic.cc  AntinodeHarmonic.h
Cpp/2024/src/Day09/: DiskCompact.cc  DiskCompact.h
Cpp/2024/src/Day10/: TrailScore.cc  TrailScore.h
Cpp/2024/src/Day11/: TwinkleStones.cc  TwinkleStones.h
Cpp/2024/src/Day12/: AsciiGraph.cc  AsciiGraph.h
Cpp/2024/src/Day13/: CoinOptimize.cc  CoinOptimize.h
Cpp/2024/src/Day14/: RobotPatrol.cc  RobotPatrol.h
Cpp/2024/src/Day15/: PushBox.cc  PushBox.h
Cpp/2024/src/Day16/: MazeDijkstra.cc  MazeDijkstra.h
Cpp/2024/src/Day17/: TenaryMachine.cc  TenaryMachine.h
Cpp/2024/src/Day18/: RAMRun.cc  RAMRun.h
Cpp/2024/src/Day19/: LinenLayout.cc  LinenLayout.h
Cpp/2024/src/Day20/: RaceCondition.cc  RaceCondition.h
Cpp/2024/src/Day21/: CascadingRemote.cc  CascadingRemote.h  KeyPadStructure.h
Cpp/2024/src/Day22/: MonkeyMarket.cc  MonkeyMarket.h
Cpp/2024/src/Day23/: LANParty.cc  LANParty.h
Cpp/2024/src/Day24/: TinkerWithGates.cc  TinkerWithGates.h
(+307 files in other folders)
