[project]
name = "aocpy"
version = "0.1.0"
description = "Python implemented AoC solutions"
authors = [{ name = "RabbitSeries", email = "xiali123.ch@gmail.com" }]
dependencies = ["numpy", "matplotlib", "pytest", "sympy"]

[project.scripts]
# <console_script_name> = "<module>:<callable>"
aocpy_launch = "aocpy.aoc_launcher.launcher:main"

[build-system]
# build-backend = "mesonpy"
# requires = ["meson-python"]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.autopep8]
# ignore = ["E701"]
max_line_length = 125
agressive = 3
verbose = 5

[tool.setuptools.packages.find]
where = ["Python"]
include = ["aocpy*"]

[tool.setuptools.package-data]
# # Format: <package_name> = [<file_patterns>]
"*" = ["resources/**/input.txt"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["Python/tests"]
python_files = ["test_*.py", "*_test.py"]
